--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ yarn-debug.log*
 .yarn-integrity
 /config/database.yml
 /public/uploads
+# Ignore application configuration
+/config/application.yml
