--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postcss": "^8.3.0",
     "stimulus": "^2.0.0",
     "stimulus-carousel": "^2.0.0",
+    "tailwind-scrollbar-hide": "^1.0.3",
     "tailwindcss": "^2.1.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
